--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blust-ai-custom-tool-template",
+  "name": "blust-ai-corrector",
   "private": true,
   "author": {
     "name": "Eugene Lobachev"
